on home page can view all the posts + can create new post with the Stable Difussion model

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "node-sass": "^7.0.3",
     "sass-loader": "^13.1.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
+    "vue-router": "^4.0.13",
+    "vue-slider-component": "^4.1.0-beta.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
