--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vue-slider-component": "^4.1.0-beta.2",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
